# internal/app/createAgent_handler.go
@@ -1,1 +1,10 @@
 package app
+
+import (
+	"context"
+	"lignis/internal/generated/api"
+)
+
+func (a App) CreateAgent(ctx context.Context, req *api.Agent) (*api.ResponseWithID, error) {
+	return &api.ResponseWithID{}, nil
+}
