# swagger/api.yaml
@@ -1,9 +1,9 @@
 openapi: 3.0.3
 info:
   version: 1.0.0
-  title: Education api
+  title: LIGNIS API
 servers:
-  - url: http://localhost:17001/
+  - url: http://localhost:7707/
 paths:
   /api/v1/login:
     post:
@@ -42,12 +42,12 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
       responses:
-        '200':
+        '201':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SuccessResponse'
+                $ref: '#/components/schemas/ResponseWithID'
         default:
           description: Unauthorized
           content:
@@ -79,8 +79,7 @@ paths:
                 $ref: '#/components/schemas/Error'
   /api/v1/agent:
     post:
-      summary: Create agent
-      description: Create agent
+      summary: Create Agent
       operationId: createAgent
       requestBody:
         required: true
@@ -125,7 +124,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
+  
 components:
   securitySchemes:
     BearerAuth:
@@ -137,12 +136,8 @@ components:
       description: Represents error object
       type: object
       required:
-        - code
         - message
       properties:
-        code:
-          type: integer
-          format: int64
         message:
           type: string
     SuccessResponse:
@@ -176,7 +171,6 @@ components:
       properties:
         id:
           type: string
-          format: uuid
     AddProductRequest:
       type: object
       required:
@@ -207,6 +201,13 @@ components:
           type: string
         role:
           type: string
+    UserWithID:
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: string
+        - $ref: '#/components/schemas/User'
     Customer:
       type: object
       required:
@@ -220,6 +221,13 @@ components:
           type: string
         address:
           type: string
+    CustomerWithID:
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: string
+        - $ref: '#/components/schemas/Customer'
     Agent:
       type: object
       required:
@@ -236,6 +244,13 @@ components:
           type: string
         bonus_percent:
           type: number
-        
+    AgentWithID:
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: string
+        - $ref: '#/components/schemas/Agent'
+
 security:
   - BearerAuth: [ ]
